bug align square ok

--- a/src/components/BoardCollab/styles.css
+++ b/src/components/BoardCollab/styles.css
@@ -1,6 +1,10 @@
 .board {
   display: inline-block;
   /* flex-wrap: wrap; */
-  width: 70vw;
-  height: 70vw;
+  width: 30vw;
+  height: 30vw;
+
+  max-width: 30vw;
+  max-height:  30vw;
+
 }
