--- a/src/components/SquareCollab/styles.css
+++ b/src/components/SquareCollab/styles.css
@@ -4,9 +4,9 @@
   border: 1px solid #6c5ce7;
   width: 33%;
   height: 33%;
-  font-size: 10vw;
+  font-size: 5vw;
   color: #e84393;
   cursor: pointer;
-  /* display: block; */
+  vertical-align: top;
 }
 
